# tess-mcp-server

./: .env.example  .gitignore  .npmignore  .pylintrc  COMO_USAR_MCP.md  Cargo.toml  Dockerfile  LICENSE  README.md  SOLUCAO-PROBLEMAS.md  arcee_chat.py  diegofornalha-crew-ai-tess-pareto-1.0.0.tgz  guia-publicacao.md  mcp-adapter.js  mcp-run.json  package-lock.json  package.json  plano_otimizacao_adaptadores.md  requirements.txt  run_arcee_chat.py  server.js  setup.py  smithery.yaml  xtp.toml
agent/: __init__.py  arcee_agent.py
application/: __init__.py
crew-integration/: .env.example  .gitignore  README.md  app.py  filtro_agentes_tess.py  install_arcee.sh  requirements.txt  setup.sh  setup_fix.sh  start_filtro_agentes.sh
debug/: cursor_verificar_comandos.py  debug_comando_direto.py  debug_listar_comando.py  debug_mcp_cli.py  debug_tess_api.py
docs/: arquitetura_plugins_mcp.md  arquitetura_referencia.md  documentacao_comandos_tess.md
domain/: __init__.py  exceptions.py  task_manager.py  task_manager_factory.py  task_manager_interface.py  tess_manager_consolidated.py  tess_task_manager.py
hybrid_mcp/: README.md  fastapi_server.py
mcp/: __init__.py  mcp_sse_client.py
mcp-client-tess-cli/: __init__.py  config.py  logging_config.py
mcp-server-tess-xtp/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  README.md  mcp-run.json  package-lock.json  package.json  server.js  setup.sh  tess-servlet.js
public/: index.html
scripts/: README.md  __init__.py  agentes_tess.md  auto-run.js  exemplo_anuncios_mkt.json  find_tools_usage.py  iniciar_tess_mcp_dev.sh  (+14 more)
(+124 files in other folders)
